--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@ main {
     padding-right: 10px;
 }
 
+
+/*==============  PAGE DE CONNEXION ==============*/
+
 .header {
     height: 70px;
 }
@@ -46,9 +49,6 @@ main {
     text-align: center;
     line-height: 130px;
 }
-
-
-/*==============  Tout le texte la page connexion ==============*/
 
 
 /* image de connexion */
@@ -117,10 +117,16 @@ input {
     text-transform: uppercase;
     letter-spacing: 0.1em;
     background: #BB6BD9;
+    text-decoration: none;
     color: #fff;
     transition: all 0.5s ease;
     -webkit-appearance: none;
     display: block;
+}
+
+.bouton a {
+    text-decoration: none;
+    color: #fff;
 }
 
 .compte {
@@ -141,4 +147,98 @@ input {
 
 .motpasse-oublie {
     margin-bottom: 30px;
+}
+
+
+/*==============  PAGE : NOS SERVICES ==============*/
+
+.header2 {
+    height: 70px;
+}
+
+#header-sroll2 {
+    /*position: fixed;*/
+    height: 202px;
+    background: #9B51E0;
+    left: 0;
+    top: 0;
+    float: left;
+    width: 100%;
+    -ms-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+}
+
+#header-sroll2 h1 {
+    color: #ffffff;
+    font-size: 86px;
+    font-family: 'Rationale', sans-serif;
+    text-align: center;
+    line-height: 90px;
+}
+
+
+/*** Tous les services ***/
+
+.card {
+    background: #fff;
+    border-radius: 2px;
+    display: inline-block;
+    height: 100px;
+    margin: 1rem;
+    position: relative;
+    width: 250px;
+}
+
+.card>img {
+    width: 250px;
+    height: 250px;
+    padding-top: 1px;
+    display: flex;
+    justify-content: space-between;
+    /*margin-bottom: 10px;*/
+}
+
+.card-1 {
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.30), 0 2px 2px rgba(0, 0, 0, 0.22);
+}
+
+.card-2 {
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.30), 0 5px 5px rgba(0, 0, 0, 0.22);
+}
+
+.card-3 {
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.30), 0 5px 5px rgba(0, 0, 0, 0.22);
+}
+
+
+/* Bouton des services  */
+
+.bouton2 {
+    box-shadow: 0 5px 5px rgba(255, 255, 255, 0.3), 0 5px 5px rgba(255, 255, 255, 0.22);
+    width: 250px;
+    font-family: 'Open Sans', sans-serif;
+    border: 1px solid #1E950A;
+    border-radius: 40px;
+    outline: none;
+    padding: 11px 0;
+    margin-top: 20px;
+    margin-bottom: 47px;
+    font-size: 21px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    background: #1E950A;
+    text-decoration: none;
+    color: #fff;
+    transition: all 0.5s ease;
+    -webkit-appearance: none;
+    display: block;
+}
+
+.bouton2 a {
+    text-decoration: none;
+    color: #fff;
 }
