--- a/css/style.css
+++ b/css/style.css
@@ -30,16 +30,10 @@ main {
 #header-sroll {
     /*position: fixed;*/
     height: 202px;
-    /*background: #FBEFFF;*/
     left: 0;
     top: 0;
     float: left;
     width: 100%;
-    -ms-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
 }
 
 #header-sroll h1 {
@@ -57,7 +51,6 @@ img {
     width: 900px;
     height: 600px;
     padding-top: 70px;
-    /*margin-bottom: 10px;*/
 }
 
 
@@ -97,7 +90,6 @@ input {
     width: 800px;
     height: 90px;
     position: relative;
-    /*border: 1px solid #e6e6e6;*/
     border-radius: 50px;
     margin-bottom: 56px;
 }
@@ -119,8 +111,6 @@ input {
     background: #BB6BD9;
     text-decoration: none;
     color: #fff;
-    /* transition: all 0.5s ease;
-    -webkit-appearance: none;*/
     display: block;
 }
 
@@ -157,18 +147,12 @@ input {
 }
 
 #header-sroll2 {
-    /*position: fixed;*/
     height: 202px;
     background: #9B51E0;
     left: 0;
     top: 0;
     float: left;
     width: 100%;
-    /* -ms-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    -webkit-transition: all 0.3s ease-out;
-    -o-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;*/
 }
 
 #header-sroll2 h1 {
@@ -183,8 +167,8 @@ input {
 /*** Tous les services ***/
 
 .card {
-    background: #FBEFFF;
-    border-radius: 2px;
+    /*background: #FBEFFF;*/
+    /*border-radius: 2px;*/
     display: inline-block;
     height: 100px;
     margin: 1rem;
@@ -198,29 +182,24 @@ input {
     padding-top: 1px;
     display: flex;
     justify-content: space-between;
-    /*margin-bottom: 10px;*/
 }
 
-
-/*
 .card-1 {
-    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.30), 0 2px 2px rgba(0, 0, 0, 0.22);
+    background: #FBEFFF;
 }
 
 .card-2 {
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.30), 0 5px 5px rgba(0, 0, 0, 0.22);
+    background: #FBEFFF;
 }
 
 .card-3 {
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.30), 0 5px 5px rgba(0, 0, 0, 0.22);
+    background: #FBEFFF;
 }
-*/
 
 
 /* Bouton des services  */
 
 .bouton2 {
-    /*box-shadow: 0 5px 5px rgba(255, 255, 255, 0.3), 0 5px 5px rgba(255, 255, 255, 0.22);*/
     width: 250px;
     font-family: 'Open Sans', sans-serif;
     border: 1px solid #1E950A;
