--- a/css/style-origin.css
+++ b/css/style-origin.css
@@ -21,10 +21,12 @@ main {
 }
 
 
-/*==============  PAGE 1 : CONNEXION ==============*/
+/*==============  PAGE DE CONNEXION ==============*/
 
 #header-sroll {
+    /*position: fixed;*/
     height: 100px;
+    /*background: #FBEFFF;*/
     left: 0;
     top: 0;
     float: left;
@@ -33,6 +35,7 @@ main {
 
 #header-sroll h1 {
     color: #BB6BD9;
+    /*font-size: 22px;*/
     font-size: 22px;
     font-family: 'Rationale', sans-serif;
     text-align: center;
@@ -46,6 +49,7 @@ img {
     width: 280px;
     height: 200px;
     margin-top: 10px;
+    /*margin-bottom: 10px;*/
 }
 
 
@@ -59,6 +63,7 @@ img {
     font-family: 'Roboto', sans-serif;
     color: #BB6BD9;
     font-size: 20px;
+    /*top: 330px;*/
     margin-bottom: -1px;
 }
 
@@ -73,17 +78,6 @@ img {
     font-size: 12px;
     line-height: 14px;
     text-align: center;
-}
-
-.text-2 p {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 14, 01px;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-left: 4%;
-    margin-right: 4%;
 }
 
 
@@ -147,85 +141,6 @@ input {
 }
 
 
-/*==============  PAGE 2 : NOS SERVICES ==============*/
-
-.header2 {
-    height: 70px;
-}
-
-#header-sroll2 {
-    height: 70px;
-    background: #9B51E0;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    left: 0;
-    top: 0;
-    float: left;
-    width: 100%;
-}
-
-#header-sroll2 h1 {
-    color: #ffffff;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    font-family: 'Rationale', sans-serif;
-    text-align: center;
-    line-height: 40px;
-}
-
-
-/*** Tous les services ***/
-
-.card {
-    background: #fff;
-    border-radius: 2px;
-    display: inline-block;
-    width: 91px;
-    height: 100px;
-    margin: 0.5rem;
-    position: relative;
-}
-
-.card>img {
-    width: 91px;
-    height: 100px;
-    margin-top: -7px;
-}
-
-
-/* Bouton des services  */
-
-.bouton2 {
-    box-shadow: 0 5px 5px rgba(255, 255, 255, 0.3), 0 5px 5px rgba(255, 255, 255, 0.22);
-    width: 84px;
-    height: 19px;
-    font-family: 'Open Sans', sans-serif;
-    border: 1px solid #BB6BD9;
-    border-radius: 40px;
-    outline: none;
-    padding: 6px 0;
-    margin-top: 8px;
-    margin-bottom: 47px;
-    font-size: 6px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    background: #BB6BD9;
-    text-decoration: none;
-    color: #fff;
-    transition: all 0.5s ease;
-    -webkit-appearance: none;
-    display: block;
-}
-
-.bouton2 a {
-    text-decoration: none;
-    color: #fff;
-}
-
-
 /* Les medias query */
 
 @media screen and (min-width: 760px) and (max-width: 1206px) {
@@ -242,8 +157,10 @@ input {
     }
 }
 
-@media screen and (min-width: 150px) and (max-width: 348px) {
-    .card {
-        margin: 0.1rem;
+
+/*
+@media screen and (min-width: 288px) and (max-width: 642px) {
+    #header-sroll h1 {
+        line-height: 100px;
     }
-}
+}*/
