--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,12 @@ main {
 }
 
 
-/*==============  PAGE 1 : CONNEXION ==============*/
+/*==============  PAGE DE CONNEXION ==============*/
 
 #header-sroll {
+    /*position: fixed;*/
     height: 100px;
+    /*background: #FBEFFF;*/
     left: 0;
     top: 0;
     float: left;
@@ -33,6 +35,7 @@ main {
 
 #header-sroll h1 {
     color: #BB6BD9;
+    /*font-size: 22px;*/
     font-size: 22px;
     font-family: 'Rationale', sans-serif;
     text-align: center;
@@ -46,6 +49,7 @@ img {
     width: 280px;
     height: 200px;
     margin-top: 10px;
+    /*margin-bottom: 10px;*/
 }
 
 
@@ -59,6 +63,7 @@ img {
     font-family: 'Roboto', sans-serif;
     color: #BB6BD9;
     font-size: 20px;
+    /*top: 330px;*/
     margin-bottom: -1px;
 }
 
@@ -73,17 +78,6 @@ img {
     font-size: 12px;
     line-height: 14px;
     text-align: center;
-}
-
-.text-2 p {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 14, 01px;
-    text-align: center;
-    margin-bottom: 20px;
-    margin-left: 4%;
-    margin-right: 4%;
 }
 
 
