--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,28 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 75vh;
+    height: 79vh;
     padding-left: 10px;
     padding-right: 10px;
 }
+
+
+/*
+main section {
+    /*margin-bottom: -63px;*/
+
+
+/*display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;*/
+
+
+/*position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}*/
 
 
 /*==============  PAGE DE CONNEXION ==============*/
@@ -162,6 +180,7 @@ input {
     top: 0;
     float: left;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 #header-sroll2 h1 {
@@ -196,26 +215,24 @@ input {
 /* Bouton des services  */
 
 .bouton2 {
-    box-shadow: 0 5px 5px rgba(255, 255, 255, 0.3), 0 5px 5px rgba(255, 255, 255, 0.22);
-    width: 84px;
-    height: 19px;
+    box-shadow: 0 5px 5px rgb(255 255 255 / 30%), 0 5px 5px rgb(255 255 255 / 22%);
+    width: 83px;
+    height: 13px;
     font-family: 'Open Sans', sans-serif;
-    border: 1px solid #BB6BD9;
+    border: 1px solid #1E950A;
     border-radius: 40px;
     outline: none;
-    padding: 6px 0;
-    margin-top: 8px;
+    padding: 2px 0;
+    margin-top: 10px;
     margin-bottom: 47px;
-    font-size: 6px;
+    font-size: 7px;
+    text-align: center;
     font-weight: 600;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     letter-spacing: 0.1em;
-    background: #BB6BD9;
+    background: #1E950A;
     text-decoration: none;
     color: #fff;
-    transition: all 0.5s ease;
-    -webkit-appearance: none;
-    display: block;
 }
 
 .bouton2 a {
@@ -226,21 +243,75 @@ input {
 
 /*==============  PAGE 3 : Choisir son médecin ==============*/
 
+#tous-les-cards1 {
+    margin-bottom: 15px;
+}
+
 img.image-service {
-    width: 60px;
-    height: 70px;
+    width: 91px;
+    height: 93px;
+    margin-bottom: -2px;
+    margin-top: 1px;
+    line-height: 90px;
 }
 
 .card>p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 8px;
+    line-height: 0.7em;
+    font-style: normal;
+    font-weight: normal;
+    color: #335076;
+}
+
+.card>p.medg {
+    /*font-weight: bold;*/
+    color: #7710A8;
+}
+
+.card>h2 {
+    font-family: 'Rationale', sans-serif;
+    letter-spacing: 1px;
+    line-height: 0.7em;
+    font-style: normal;
+    font-weight: normal;
     font-size: 9px;
 }
 
-.card>span {
-    font-size: 7px;
+.card>h3 {
+    font-size: 9px;
+    line-height: 0.3em;
+    margin-bottom: 2px;
+}
+
+.card>.etoiles {
+    margin-bottom: -3px;
+}
+
+.card>.etoiles span {
+    font-size: 9px;
 }
 
 .checked {
     color: orange;
+}
+
+.card>p.prix {
+    /*font-weight: bold;*/
+    color: #7710A8;
+    font-weight: bolder;
+    font-size: 11px;
+    margin-bottom: -1px;
+}
+
+hr {
+    width: 252px;
+    height: 0px;
+    color: #9B51E0;
+    mix-blend-mode: normal;
+    border: 1px solid #9B51E0;
+    margin-top: 2%;
+    margin-bottom: 5%;
 }
 
 
