--- a/css/style.css
+++ b/css/style.css
@@ -1,106 +1,97 @@
+/* Reponse pour les utilisateurs qui vont se connecter à l'application mobile depuis l'ordinateur */
+
+
+/* Affichage  de l'arrière plan du contenu PC */
+
 @import url('https://fonts.googleapis.com/css2?family=Rationale&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rationale&family=Roboto:wght@300&display=swap');
+
+/*==============  LE corps de la page : body ==============*/
+
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background: #FBEFFF;
-}
-
-
-/*============== Le titre de la page de connexion ==============*/
-
-main {
-    display: flex;
+    background-image: url(../images/Arrière-plan1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    height: 79vh;
-    padding-left: 10px;
-    padding-right: 10px;
+    height: 94vh;
+    margin: 0 auto;
 }
 
 
-/*
-main section {
-    /*margin-bottom: -63px;*/
+/*==============  PAGE 1 : accueil ==============*/
 
-
-/*display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;*/
-
-
-/*position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}*/
-
-
-/*==============  PAGE : 1 D'ACCUEIL ==============*/
+main .header {
+    margin-top: 1em;
+    height: 70px;
+    margin-bottom: 1em;
+}
 
 #header-sroll {
-    /*position: fixed;*/
-    height: 70px;
-    /*background: #FBEFFF;*/
-    left: 0;
-    top: 0;
-    float: left;
-    width: 100%;
-}
-
-#header-sroll h1 {
-    color: #BB6BD9;
-    /*font-size: 22px;*/
-    font-size: 22px;
-    font-family: 'Rationale', sans-serif;
-    text-align: center;
-    line-height: 30px;
-}
-
-
-/* image de connexion */
-
-img {
-    width: 280px;
-    height: 200px;
-    margin-top: 10px;
-    /*margin-bottom: 10px;*/
-}
-
-
-/* Tout le contenu textuelle */
-
-.textes {
-    text-align: center;
-}
-
-.textes h2 {
-    font-family: 'Roboto', sans-serif;
-    color: #BB6BD9;
-    font-size: 20px;
-    /*top: 330px;*/
-    margin-bottom: -1px;
-}
-
-.textes p {
-    font-family: 'Roboto', sans-serif;
-    color: #4F4B4B;
-    line-height: 14, 01px;
-    margin-left: 10%;
-    margin-right: 10%;
+    height: 40px;
+    background: #ffffff;
     font-style: normal;
     font-weight: normal;
     font-size: 12px;
-    line-height: 14px;
-    text-align: center;
+    left: 0;
+    top: 0;
+    /*float: left;*/
+    width: 50vh;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    border-radius: 10px;
 }
 
-.text-2 {
+#header-sroll h1 {
+    font-family: 'Rationale', sans-serif;
+    color: #9B51E0;
+    font-style: normal;
+    font-weight: bolder;
+    font-size: 20px;
     text-align: center;
-    color: #4F4B4B;
+    line-height: 45px;
+}
+
+
+/* Tout le contenu du main */
+
+.accueil_Logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.accueil_Logo img {
+    width: 120px;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* Affichage du contenu sur PC */
+
+body main>div.accueil {
+    opacity: 0.7;
+    display: block;
+    max-width: 160px;
+    max-height: 20em;
+    padding: 70px;
+    margin: 0 auto;
+    background-color: #fff;
+    border-radius: 55px;
+    box-shadow: 0 12px 50px 16px rgba(255, 255, 255, 0.24);
+}
+
+div.accueil>h3 {
+    font-family: 'Rationale', sans-serif;
+    font-size: 30px;
+    text-align: center;
+    color: rgb(102, 96, 96);
 }
 
 
@@ -108,288 +99,65 @@ img {
 
 .bouton1,
 .bouton1-2 {
-    width: 260px;
-    height: 33px;
+    width: 200px;
+    height: 50px;
+    margin-left: -22px;
     font-family: 'Open Sans', sans-serif;
     outline: none;
-    padding: 9px 0;
-    margin-top: 2px;
     margin-bottom: 20px;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     text-decoration: none;
     color: #fff;
     display: block;
-    background: #6F21B8;
-    border: 1px solid #333333;
+    background: #2ec1e6;
     box-sizing: border-box;
-    border-radius: 50px;
-}
-
-.bouton1 a,
-.bouton1-2 a {
-    text-decoration: none;
-    color: #fff;
+    border-radius: 10px;
+    border: 2px solid #ffffff;
+    box-shadow: 0px 2px 2px rgba(63, 61, 61, 0.05), 0px 6px 6px rgba(63, 61, 61, 0.05), 0px 8px 8px rgba(63, 61, 61, 0.05), 0px 10px 15px rgba(63, 61, 61, 0.05), 0px 30px 30px rgba(63, 61, 61, 0.05), 0px 70px 60px rgba(63, 61, 61, 0.05);
 }
 
 .bouton1-2 {
-    background: #2CED34;
-}
-
-
-/* les champs de saisie */
-
-input {
-    font-family: 'Roboto', sans-serif;
-    background: #FFFFFF;
-    box-sizing: border-box;
-    font-size: 12px;
-    text-align: center;
-    width: 240px;
-    height: 30px;
-    border: 1px solid #333333;
-    position: relative;
-    border-radius: 50px;
-    margin-bottom: 18px;
-}
-
-.input2 {
-    font-family: 'Roboto', sans-serif;
-    background: #C4C4C4;
-    box-sizing: border-box;
-    font-size: 12px;
-    text-align: center;
-    width: 171px;
-    height: 36px;
-    color: #000000;
-    border: 1px solid #C4C4C4;
-    /*position: relative;*/
-    border-radius: 1px;
-    margin-bottom: 18px;
-    margin-left: 10px;
-}
-
-
-/*
-.input2[placeholder="Écrivez l’heure ici"] {
-    color: #FFF;
-}*/
-
-
-/* Bouton de connexion  */
-
-.bouton {
-    width: 240px;
-    height: 30px;
-    font-family: 'Open Sans', sans-serif;
-    border: 1px;
-    outline: none;
-    padding: 9px 0;
-    margin-top: 2px;
-    margin-bottom: 35px;
     font-size: 14px;
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    background: #BB6BD9;
-    text-decoration: none;
-    color: #fff;
-    display: block;
+    background: #ffffff;
 }
 
-.bouton a {
+.bouton1-2 a {
+    text-decoration: none;
+    color: rgb(102, 96, 96);
+}
+
+.bouton1 a {
     text-decoration: none;
     color: #fff;
 }
+
+
+/* Les conditions d'utilisation */
 
 .compte {
-    font-family: 'Roboto', sans-serif;
     text-align: center;
-    margin-top: -40px;
+    font-weight: bolder;
+}
+
+.compte p {
+    font-size: 13px;
+    color: #000000;
+    font-weight: 900;
+    margin-left: 39px;
+    margin-right: 38px;
+    margin-top: 30px;
 }
 
 .compte p a {
-    font-size: 11px;
-    text-decoration: none;
-    color: #000;
+    font-size: 13px;
+    color: #cc0606;
+    font-weight: 900;
 }
 
 .compte p a span {
-    color: #BB6BD9;
-}
-
-
-/*==============  PAGE 2 : NOS SERVICES ==============*/
-
-.header2 {
-    height: 70px;
-}
-
-#header-sroll2 {
-    height: 70px;
-    background: #9B51E0;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    left: 0;
-    top: 0;
-    float: left;
-    width: 100%;
-    margin-bottom: 20px;
-}
-
-#header-sroll2 h1 {
-    color: #ffffff;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 24px;
-    font-family: 'Rationale', sans-serif;
-    text-align: center;
-    line-height: 40px;
-}
-
-
-/*** Tous les services ***/
-
-.card {
-    border-radius: 2px;
-    display: inline-block;
-    width: 91px;
-    height: 100px;
-    margin: 0.5rem;
-    position: relative;
-}
-
-.card>img {
-    width: 91px;
-    height: 100px;
-    margin-top: -7px;
-}
-
-
-/* Bouton des services  */
-
-.bouton2 {
-    box-shadow: 0 5px 5px rgb(255 255 255 / 30%), 0 5px 5px rgb(255 255 255 / 22%);
-    width: 83px;
-    height: 13px;
-    font-family: 'Open Sans', sans-serif;
-    border: 1px solid #1E950A;
-    border-radius: 40px;
-    outline: none;
-    padding: 2px 0;
-    margin-top: 10px;
-    margin-bottom: 47px;
-    font-size: 7px;
-    text-align: center;
-    font-weight: 600;
-    /*text-transform: uppercase;*/
-    letter-spacing: 0.1em;
-    background: #1E950A;
-    text-decoration: none;
-    color: #fff;
-}
-
-.bouton2 a {
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/*==============  PAGE 3 : Choisir son médecin ==============*/
-
-#tous-les-cards1 {
-    margin-bottom: 15px;
-}
-
-img.image-service {
-    width: 91px;
-    height: 93px;
-    margin-bottom: -2px;
-    margin-top: 1px;
-    line-height: 90px;
-}
-
-.card>p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 8px;
-    line-height: 0.7em;
-    font-style: normal;
-    font-weight: normal;
-    color: #335076;
-}
-
-.card>p.medg {
-    /*font-weight: bold;*/
-    color: #7710A8;
-}
-
-.card>h2 {
-    font-family: 'Rationale', sans-serif;
-    letter-spacing: 1px;
-    line-height: 0.7em;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 9px;
-}
-
-.card>h3 {
-    font-size: 9px;
-    line-height: 0.3em;
-    margin-bottom: 2px;
-}
-
-.card>.etoiles {
-    margin-bottom: -3px;
-}
-
-.card>.etoiles span {
-    font-size: 9px;
-}
-
-.checked {
-    color: orange;
-}
-
-.card>p.prix {
-    /*font-weight: bold;*/
-    color: #7710A8;
-    font-weight: bolder;
-    font-size: 11px;
-    margin-bottom: -1px;
-}
-
-hr {
-    width: 252px;
-    height: 0px;
-    color: #9B51E0;
-    mix-blend-mode: normal;
-    border: 1px solid #9B51E0;
-    margin-top: 2%;
-    margin-bottom: 5%;
-}
-
-
-/* Les medias query */
-
-@media screen and (min-width: 760px) and (max-width: 1206px) {
-    #header-sroll h1 {
-        font-size: 30px;
-        line-height: 90px;
-    }
-}
-
-@media screen and (min-width: 321px) and (max-width: 759px) {
-    #header-sroll h1 {
-        font-size: 30px;
-        line-height: 90px;
-    }
-}
-
-@media screen and (min-width: 150px) and (max-width: 348px) {
-    .card {
-        margin: 0.1rem;
-    }
+    color: #cc0606;
+    font-weight: 900;
 }
