--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 /*==============  LE corps de la page : body ==============*/
 
 body {
-    background-image: url(../images/img-connexion.jpg);
+    background-image: url(../images/Arrière_plan1.png);
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
