--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 /*==============  LE corps de la page : body ==============*/
 
 body {
-    background-image: url(../images/Arrière_plan1.png);
+    background-image: url(../images/epokrate-test-img.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
@@ -76,7 +76,7 @@ main .header {
 /* Affichage du contenu sur PC */
 
 body main>div.accueil {
-    opacity: 0.7;
+    opacity: 0.9;
     display: block;
     max-width: 160px;
     max-height: 20em;
@@ -144,7 +144,7 @@ div.accueil>h3 {
 
 .compte p {
     font-size: 13px;
-    color: #000000;
+    color: #ffffff;
     font-weight: 900;
     margin-left: 39px;
     margin-right: 38px;
@@ -153,11 +153,11 @@ div.accueil>h3 {
 
 .compte p a {
     font-size: 13px;
-    color: #cc0606;
+    color: #2ec1e6;
     font-weight: 900;
 }
 
 .compte p a span {
-    color: #cc0606;
+    color: #2ec1e6;
     font-weight: 900;
 }
