--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ main .header {
     left: 0;
     top: 0;
     /*float: left;*/
-    width: 50vh;
+    width: 47vh;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
@@ -79,7 +79,7 @@ body main>div.accueil {
     opacity: 0.9;
     display: block;
     max-width: 160px;
-    max-height: 20em;
+    max-height: 80em;
     padding: 70px;
     margin: 0 auto;
     background-color: #fff;
@@ -160,4 +160,20 @@ div.accueil>h3 {
 .compte p a span {
     color: #2ec1e6;
     font-weight: 900;
+}
+
+@media (max-width: 551.98px) {
+    #header-sroll {
+        height: 40px;
+        font-size: 12px;
+        width: 38vh;
+    }
+    body main>div.accueil {
+        max-width: 130px;
+        max-height: 80em;
+    }
+    .bouton1,
+    .bouton1-2 {
+        margin-left: -30px;
+    }
 }
