--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,14 @@ body {
 main .header {
     margin-top: 1em;
     height: 70px;
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 
 #header-sroll {
-    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
     background: #ffffff;
     font-style: normal;
     font-weight: normal;
@@ -44,9 +47,12 @@ main .header {
     border-radius: 10px;
 }
 
+
+/* page connexion*/
+
 #header-sroll h1 {
     font-family: 'Rationale', sans-serif;
-    color: #9B51E0;
+    color: #5a00af;
     font-style: normal;
     font-weight: bolder;
     font-size: 20px;
@@ -55,9 +61,29 @@ main .header {
 }
 
 
+/*
+#header-sroll {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+*/
+
+#header-sroll img {
+    width: 60px;
+    height: 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: -50px;*/
+}
+
+
 /* Tout le contenu du main */
 
-.accueil_Logo {
+.accueil_Logo,
+.connexion_Logo {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,11 +91,23 @@ main .header {
 
 .accueil_Logo img {
     width: 120px;
-    height: 70px;
+    height: 112px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: -50px;
+}
+
+.connexion_Logo img {
+    width: 200px;
+    height: 70px;
+    margin-bottom: -11px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: -30px;
 }
 
 
@@ -79,7 +117,7 @@ body main>div.accueil {
     opacity: 0.7;
     display: block;
     max-width: 160px;
-    max-height: 80em;
+    max-height: 20em;
     padding: 70px;
     margin: 0 auto;
     background-color: #fff;
@@ -95,18 +133,59 @@ div.accueil>h3 {
 }
 
 
+/* Tout le contenu textuelle */
+
+.textes {
+    display: block;
+    justify-content: center;
+    align-items: center;
+}
+
+.textes h2 {
+    font-family: 'Rationale', sans-serif;
+    font-weight: 900;
+    color: #5a00af;
+    font-size: 30px;
+    /*top: 330px;*/
+    margin-bottom: -1px;
+    margin-left: -8px;
+    margin-right: -40px;
+}
+
+.textes p {
+    font-family: 'Rationale', sans-serif;
+    color: #000000;
+    font-style: normal;
+    font-weight: 200;
+    font-size: 14px;
+    line-height: 14px;
+    margin-left: -50px;
+    margin-right: -40px;
+    text-align: center;
+    margin-bottom: 3.50em;
+    /*text-align: center;*/
+}
+
+
 /* les boutons pour la page connexion */
+
+form,
+#les-boutons {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
 .bouton1,
 .bouton1-2 {
-    width: 200px;
+    font-family: 'Rationale', sans-serif;
+    width: 215px;
     height: 50px;
-    margin-left: -22px;
-    font-family: 'Open Sans', sans-serif;
     outline: none;
-    margin-bottom: 20px;
-    font-size: 12px;
-    font-weight: 600;
+    margin-bottom: 32px;
+    font-size: 22px;
+    font-weight: 900;
     text-transform: uppercase;
     letter-spacing: 0.1em;
     text-decoration: none;
@@ -120,7 +199,8 @@ div.accueil>h3 {
 }
 
 .bouton1-2 {
-    font-size: 14px;
+    font-size: 25px;
+    font-weight: 900;
     background: #ffffff;
 }
 
@@ -135,42 +215,49 @@ div.accueil>h3 {
 }
 
 
+/* les champs de saisie */
+
+input {
+    font-family: 'Rationale', sans-serif;
+    background: #FFFFFF;
+    box-sizing: border-box;
+    font-size: 16px;
+    text-align: center;
+    width: 200px;
+    height: 35px;
+    border: 2px solid #8e8787;
+    position: relative;
+    border-radius: 5px;
+    margin-bottom: 18px;
+}
+
+
 /* Les conditions d'utilisation */
 
 .compte {
-    text-align: center;
-    font-weight: bolder;
-}
-
-.compte p {
-    font-size: 13px;
-    color: #000000;
+    font-family: 'Rationale', sans-serif;
     font-weight: 900;
-    margin-left: 39px;
-    margin-right: 38px;
-    margin-top: 20px;
+    text-align: center;
+    line-height: 7px;
+    margin-top: 1.50em;
 }
 
 .compte p a {
-    font-size: 12px;
-    color: #ff0000;
-    font-weight: 900;
+    font-size: 14px;
+    text-decoration: none;
+    color: #000;
 }
 
 .compte p a span {
-    color: #ff0000;
-    font-weight: 900;
+    color: #BB6BD9;
+    text-decoration: underline;
 }
 
 @media (max-width: 551.98px) {
     #header-sroll {
         height: 40px;
         font-size: 12px;
-        width: 38vh;
-    }
-    .bouton1,
-    .bouton1-2 {
-        margin-left: -30px;
+        width: 50vh;
     }
 }
 
@@ -178,7 +265,10 @@ div.accueil>h3 {
     body main>div.accueil {
         max-width: 130px;
         max-height: 18em;
-        margin-top: -1.50em;
+        margin-top: -2.50em;
+    }
+    .compte {
+        margin-top: -0.10em;
     }
     .compte p a {
         font-size: 9px;
